@@ -5,15 +5,21 @@ Changelog of lizard-map
 1.37 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Changed 'load map location' to 'load default map location'.
+
+- Removed 'save map location'.
+
+- The map automatically saves its position when leaving the page.
 
 
+=======
 1.36 (2011-01-06)
 -----------------
 
 - Added function detect_prj in coordinates.
 
 
+>>>>>>> .r16829
 1.35 (2011-01-06)
 -----------------
 
